--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Team Guardians"
+rootProject.name = "TG_Patient_Profile"
 include ':app'
