--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.TeamGuardians"
         tools:targetApi="31">
         <activity
+            android:name=".DailyReportActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".PatientProfileList"
             android:exported="false" />
         <activity
@@ -44,9 +51,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- These are here only for UI testing -->
+        </activity> <!-- These are here only for UI testing -->
         <activity
             android:name=".Careplan1"
             android:exported="false" />
@@ -62,7 +67,6 @@
         <activity
             android:name=".Dataforview2Activity"
             android:exported="false" />
-
 
         <meta-data
             android:name="preloaded_fonts"
