--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,26 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'com.orhanobut:dialogplus:1.11@aar'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+    //Rounded Image View
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //Navigation Component
+//    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc03'
+//    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc03'
+
+//    def lifecycle_version = "2.4.0"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
