--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.TeamGuardians"
         tools:targetApi="31">
         <activity
+            android:name=".DailyReportSummaryActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".DailyReportActivity"
             android:exported="false">
             <meta-data
@@ -66,9 +73,6 @@
             android:exported="false" />
         <activity
             android:name=".Dataforview2Activity"
-            android:exported="false" />
-        <activity
-            android:name=".TestActivity"
             android:exported="false" />
 
         <meta-data
