--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
 pluginManagement {
     repositories {
         gradlePluginPortal()
@@ -5,11 +7,14 @@ pluginManagement {
         mavenCentral()
     }
 }
+
+
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 rootProject.name = "TG_Patient_Profile"
