--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.tg_patient_profile">
+    package="com.example.tg_patient_profile" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,24 +14,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamGuardians"
-        tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".CarePlanActivity"-->
-<!--            android:exported="false">-->
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity>-->
+        tools:targetApi="31" >
+        <activity
+            android:name=".CaretakeDashboard"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <!-- <activity -->
+        <!-- android:name=".CarePlanActivity" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> -->
         <activity
             android:name=".DailyReportSummaryActivity"
-            android:exported="false">
+            android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".DailyReportActivity"
-            android:exported="false">
+            android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -59,7 +66,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -81,15 +88,12 @@
         <activity
             android:name=".Dataforview2Activity"
             android:exported="false" />
-
         <activity
             android:name=".MedicalDiagnosticsActivity"
             android:exported="false" />
-
         <activity
             android:name=".DrawerActivity"
             android:exported="false" />
-
         <activity
             android:name=".PatientProfileUpdate"
             android:exported="false" />
