--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamGuardians"
         tools:targetApi="31">
+        <activity
+            android:name=".GP_List"
+            android:exported="false" />
+        <activity
+            android:name=".GP_Model"
+            android:exported="false" />
+        <activity
+            android:name=".GP_Add"
+            android:exported="false" />
+        <activity
+            android:name=".GP_Adapter"
+            android:exported="false" />
 <!--        <activity-->
 <!--            android:name=".CarePlanActivity"-->
 <!--            android:exported="false">-->
