--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.TeamGuardians"
         tools:targetApi="31" >
         <activity
-            android:name=".CaretakeDashboard"
+            android:name=".view.caretaker.CaretakerDashboardActivity"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
@@ -30,42 +30,39 @@
         <!-- android:value="" /> -->
         <!-- </activity> -->
         <activity
-            android:name=".DailyReportSummaryActivity"
+            android:name=".view.patient.dailyreport.DailyReportSummaryActivity"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".DailyReportActivity"
+            android:name=".view.patient.dailyreport.DailyReportActivity"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".PatientProfileList"
+            android:name=".view.general.PatientListActivity"
             android:exported="false" />
         <activity
-            android:name=".NewPatientActivity"
+            android:name=".view.caretaker.CaretakerProfile"
             android:exported="false" />
         <activity
-            android:name=".CareTakerProfile"
+            android:name=".view.patient.PatientDashboardActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".view.general.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".view.general.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".view.general.AddNewPatientActivity"
             android:exported="false" />
         <activity
-            android:name=".AddActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".view.general.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -74,28 +71,25 @@
             </intent-filter>
         </activity> <!-- These are here only for UI testing -->
         <activity
-            android:name=".Careplan1"
+            android:name=".view.patient.careplan.Careplan1"
             android:exported="false" />
         <activity
-            android:name=".Careplan2"
+            android:name=".view.patient.careplan.Careplan2"
             android:exported="false" />
         <activity
-            android:name=".Careplan3"
+            android:name=".view.patient.careplan.Careplan3"
             android:exported="false" />
         <activity
-            android:name=".DataforviewActivity"
+            android:name=".view.patient.dailyreport.Dataforview2Activity"
             android:exported="false" />
         <activity
-            android:name=".Dataforview2Activity"
+            android:name=".view.patient.healthdata.healthdetails.MedicalDiagnosticsActivity"
             android:exported="false" />
         <activity
-            android:name=".MedicalDiagnosticsActivity"
+            android:name=".view.general.DrawerActivity"
             android:exported="false" />
         <activity
-            android:name=".DrawerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PatientProfileUpdate"
+            android:name=".view.patient.healthdata.healthandwelfaredetails.HealthAndWelfareActivity"
             android:exported="false" />
 
         <meta-data
