--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,7 @@
         <activity
             android:name=".view.general.AddNewPatientActivity"
             android:exported="false" />
+            <!--Kussay: may we need to change the start up page into login page        -->
         <activity
             android:name=".view.general.MainActivity"
             android:exported="true">
