--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:exported="false" />
         <activity
             android:name=".view.general.UploadPhoto"
-
+            android:exported="false" />
 
 
         <activity
