--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 buildscript {
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
     }
@@ -14,6 +18,8 @@ task clean(type: Delete) {
 
 allprojects {
     repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
         jcenter()
     }
 }
