--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -62,6 +63,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
 
     implementation 'com.google.firebase:firebase-messaging:23.0.5'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.5.0'
 
 
     testImplementation 'junit:junit:4.13.2'
