Small Changes to Crop
I Updated the crop, so that when users select images they will be sent directly to crop.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,8 @@ dependencies {
     //ProfileCirle
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //CropImg
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+//    implementation 'com.theartofdev.edmodo:android-image-cropper:x.y.z'
 
 
     //Navigation Component
