--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //CropImg
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 //    implementation 'com.theartofdev.edmodo:android-image-cropper:x.y.z'
 
 
