--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "Android_Development" ]
   pull_request:
     branches: [ "Android_Development" ]
+  workflow_dispatch:
 
 jobs:
   build:
