--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,20 @@ buildscript {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
     }
+
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.4.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.9.20"
     }
-//    dependencies {
-//        classpath 'com.google.gms:google-services:4.3.14'
-//    }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+
 plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'com.android.library' version '8.1.2' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
 
@@ -23,6 +24,5 @@ allprojects {
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
-        jcenter()
     }
 }
