--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
         viewBinding true
         dataBinding true
     }
-    namespace 'com.example.guardian'
+    namespace 'com.gopher.guardian'
 }
 
 spotless {
