fix lint command

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
       - name: Android Lint with Gradle
-        run: ./gradlew build
+        run: ./gradlew lint
