--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name="deakin.gopher.guardian.view.general.Homepage4caretaker"
             android:exported="false" />
         <activity
+            android:name="deakin.gopher.guardian.view.general.Homepage4nurse"
+            android:exported="false" />
+        <activity
             android:name="deakin.gopher.guardian.view.general.UploadPhoto"
             android:exported="false" />
         <activity
