--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:23.0.5'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.5.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
 
     testImplementation 'junit:junit:4.13.2'
