Created blank tasks page
Also fixed user login issue again, allowing users to login with each of the three roles.

Blank tasks page is currently visual only, function will be introduced later

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity
             android:name="deakin.gopher.guardian.view.general.Homepage4nurse"
             android:exported="false" />
+        <activity android:name=".view.general.TasksListActivity"
+            android:exported="false" />
         <activity
             android:name="deakin.gopher.guardian.view.general.UploadPhoto"
             android:exported="false" />
