Created a Session Timeout Feature
With the addition of this feature, the application while in minimised or closed state logs out the user after 30 min has passed. This enhances the security of the application.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         <activity
             android:name="deakin.gopher.guardian.view.patient.PatientDashboardActivity"
             android:exported="false" />
+        <activity android:name="deakin.gopher.guardian.view.general.BaseActivity" />
 
         <service
             android:name="deakin.gopher.guardian.model.FirebaseMessagingService"
