--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,6 +123,7 @@
         <activity
             android:name="deakin.gopher.guardian.view.patient.PatientDashboardActivity"
             android:exported="false" />
+        <activity android:name="deakin.gopher.guardian.view.general.BaseActivity" />
 
         <service
             android:name="deakin.gopher.guardian.model.FirebaseMessagingService"
