--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
     defaultConfig {
         applicationId "deakin.gopher.guardian"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
@@ -144,6 +144,10 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Material Design Date Time Picker
+    implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.2.0'
+    implementation 'com.maxkeppeler.sheets-compose-dialogs:date-time:1.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
