--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,6 +148,21 @@ dependencies {
     // Material Design Date Time Picker
     implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.2.0'
     implementation 'com.maxkeppeler.sheets-compose-dialogs:date-time:1.2.0'
+
+    // For Jetpack Compose.
+    implementation("com.patrykandpatrick.vico:compose:1.13.0")
+
+    // For `compose`. Creates a `ChartStyle` based on an M2 Material Theme.
+    implementation("com.patrykandpatrick.vico:compose-m2:1.13.0")
+
+    // For `compose`. Creates a `ChartStyle` based on an M3 Material Theme.
+    implementation("com.patrykandpatrick.vico:compose-m3:1.13.0")
+
+    // Houses the core logic for charts and other elements. Included in all other modules.
+    implementation("com.patrykandpatrick.vico:core:1.13.0")
+
+    // For the view system.
+    implementation("com.patrykandpatrick.vico:views:1.13.0")
 }
 
 apply plugin: 'com.google.gms.google-services'
