--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -142,6 +143,7 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
@@ -163,6 +165,9 @@ dependencies {
 
     // For the view system.
     implementation("com.patrykandpatrick.vico:views:1.13.0")
+
+    // Jetpack Compose navigation
+    implementation("androidx.navigation:navigation-compose:2.7.5")
 }
 
 apply plugin: 'com.google.gms.google-services'
