--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         tools:replace="android:label"
         tools:targetApi="31">
         <activity
+            android:name=".view.patient.patientdata.heartrate.HeartRateActivity"
+            android:exported="false"
+            android:label="@string/title_activity_heart_rate"
+            android:theme="@style/Theme.TeamGuardians" />
+        <activity
             android:name=".view.patient.patientdata.heartrate.AddHeartRateActivity"
             android:exported="false"
             android:label="@string/title_activity_add_heart_rate"
