--- a/.github/workflows/android-lint-build.yml
+++ b/.github/workflows/android-lint-build.yml
@@ -3,8 +3,12 @@ name: Android CI
 on:
   push:
     branches: ["master"]
+    paths:
+      - 'app/**'
   pull_request:
     branches: ["master"]
+    paths:
+      - 'app/**'
   schedule:
     - cron: "0 7 * * *"
 
