--- a/.github/workflows/android-lint-build.yml
+++ b/.github/workflows/android-lint-build.yml
@@ -3,8 +3,12 @@ name: Android CI
 on:
   push:
     branches: ["master"]
+    paths:
+      - 'app/**'
   pull_request:
     branches: ["master"]
+    paths:
+      - 'app/**'
   schedule:
     - cron: "0 7 * * *"
 
@@ -25,4 +29,4 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run gradle tasks
-        run: ./gradlew ${{ matrix.gradle.task }}
+        run: ./gradlew ${{ matrix.gradle-task }}
