--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         <activity
             android:name="deakin.gopher.guardian.view.patient.PatientDashboardActivity"
             android:exported="false" />
+        <activity android:name="deakin.gopher.guardian.view.caretaker.CaretakerProfileActivity" />
 
         <service
             android:name="deakin.gopher.guardian.model.FirebaseMessagingService"
