--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,8 +116,11 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation('androidx.test:runner:1.5.2')
+    androidTestImplementation('androidx.test:rules:1.5.0')
+    androidTestImplementation('androidx.test.espresso:espresso-intents:3.4.0')
 
     implementation 'com.xeoh.android:checkboxgroup:1.0.1'
     //Material Design
