use custom CI action for instrumented tests

--- a/.github/workflows/android-lint-build.yml
+++ b/.github/workflows/android-lint-build.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        gradle-task: [lint, build, test, connectedAndroidTest]
+        gradle-task: [lint, build, test]
     steps:
       - uses: actions/checkout@v3
       - name: set up JDK 17
@@ -30,3 +30,14 @@ jobs:
         run: chmod +x gradlew
       - name: Run gradle tasks
         run: ./gradlew ${{ matrix.gradle-task }}
+  instrumentedTest:
+    runs-on: macos-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: Run Instrumented UI Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          script: ./gradlew connectedCheck
