Created test data
Firebase could not be implemented due to time constrants

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,26 +16,27 @@
         tools:replace="android:label"
         tools:targetApi="31">
         <activity
-            android:name="deakin.gopher.guardian.view.general.Setting"
+            android:name=".view.general.Setting"
             android:exported="false" />
         <activity
-            android:name="deakin.gopher.guardian.view.general.PatientProfileAddActivity"
+            android:name=".view.general.PatientProfileAddActivity"
             android:exported="false" />
         <activity
-            android:name="deakin.gopher.guardian.view.general.Homepage4admin"
+            android:name=".view.general.Homepage4admin"
             android:exported="false" />
         <activity
-            android:name="deakin.gopher.guardian.view.general.Homepage4caretaker"
+            android:name=".view.general.Homepage4caretaker"
             android:exported="false" />
         <activity
-            android:name="deakin.gopher.guardian.view.general.Homepage4nurse"
+            android:name=".view.general.Homepage4nurse"
             android:exported="false" />
-        <activity android:name=".view.general.TasksListActivity"
-            android:exported="false" />
+
         <activity android:name=".view.general.TaskDetailActivity"
             android:exported="false" />
+
         <activity android:name=".view.general.TaskAddActivity"
             android:exported="false" />
+
         <activity
             android:name="deakin.gopher.guardian.view.general.UploadPhoto"
             android:exported="false" />
@@ -129,6 +130,7 @@
         <activity
             android:name="deakin.gopher.guardian.view.patient.PatientDashboardActivity"
             android:exported="false" />
+        <activity android:name="deakin.gopher.guardian.view.general.TasksListActivity" />
 
         <service
             android:name="deakin.gopher.guardian.model.FirebaseMessagingService"
