Implemented Caretaker Profile Page (#162)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="Guardians"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TeamGuardians"
+        android:theme="@style/AppTheme"
         tools:replace="android:label"
         tools:targetApi="31">
         <activity
@@ -58,6 +58,12 @@
             android:name=".view.caretaker.CaretakerDashboardActivity"
             android:exported="false" />
         <activity
+            android:name=".view.caretaker.CaretakerProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.caretaker.EditCaretakerProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.patient.patientdata.healthdata.HealthDataActivity"
             android:exported="false" />
         <activity
@@ -65,6 +71,9 @@
             android:exported="false" />
         <activity
             android:name=".view.general.PatientProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.general.ArchivedPatientListActivity"
             android:exported="false" />
         <activity
             android:name=".view.patient.viewactivitydata.WeeklyActivityProfilingActivity"
