--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
     ext.kotlin_version = "1.9"
     ext.supportLibVersion = "25.3.0"
+
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.9.20"
     }
+
 }
 
 plugins {
@@ -16,6 +19,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id "com.diffplug.spotless" version "6.22.0"
+    id 'kotlin-kapt'
 }
 
 android {
@@ -169,7 +173,22 @@ dependencies {
 
     // Jetpack Compose navigation
     implementation("androidx.navigation:navigation-compose:2.7.5")
+    implementation ("androidx.recyclerview:recyclerview:1.2.0")
+    implementation ("androidx.cardview:cardview:1.0.0")
+    def room_version = "2.5.2"
+
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+    implementation("androidx.room:room-rxjava2:$room_version")
+    implementation("androidx.room:room-rxjava3:$room_version")
+    implementation("androidx.room:room-guava:$room_version")
+    testImplementation("androidx.room:room-testing:$room_version")
+    implementation("androidx.room:room-paging:$room_version")
+
 }
+
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
