Add jcenter for legacy libraries

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
+        jcenter()
     }
 
     dependencies {
@@ -25,5 +26,6 @@ allprojects {
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
+        jcenter()
     }
 }
