Switch jitpack to jcenter for legacy libraries

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
-        maven { url='https://jitpack.io'}
     }
 
     dependencies {
@@ -26,6 +25,6 @@ allprojects {
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
-        maven { url='https://jitpack.io'}
+        maven { url='https://jcenter.bintray.com/'}
     }
 }
