--- a/settings.gradle
+++ b/settings.gradle
@@ -5,17 +5,15 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url='https://jitpack.io'}
     }
 }
 
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
         google()
         mavenCentral()
-        maven { url='https://jitpack.io'}
     }
 }
 rootProject.name = "Guardian"
