--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ android {
     }
     buildFeatures {
         viewBinding true
-        dataBinding true
+//        dataBinding true
         compose true
     }
     namespace 'deakin.gopher.guardian'
